# sse-optimizations

./: .gitignore  CMakeLists.txt  Makefile  README.md  basics.cpp  generate_arrays.rb  max.cpp  sum.cpp
1-basics/: CMakeLists.txt  main.cpp
2-sum/: CMakeLists.txt  main.cpp
3-max/: CMakeLists.txt  main.cpp
common/: CMakeLists.txt  benchmark.hpp
src/: basics.cpp  benchmark.hpp  generators.hpp  max.cpp  sum.cpp
